Fix gap between footer and grid

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -18,12 +18,11 @@ body {
   width: 100%;
   display: grid;
   grid-template-columns: 0.5fr 2.5fr 0fr;
-  grid-template-rows: 0.2fr 1.5fr 9fr 0.8fr;
+  grid-template-rows: auto;
   grid-template-areas:
     "nav nav nav nav"
     "main main main main"
-    "sidebar content content content"
-    /* "footer footer footer footer" */;
+    "sidebar content content content";
   font-weight: 800;
   font-size: 12px;
   color: #000000fa;
